[package]
name = "starmap"
version = "0.1.0"
edition = "2021"
description = "Generate Awesome Lists from your GitHub Stars, organized by Lists"
license = "MIT"
repository = "https://github.com/nozomi-koborinai/starmap"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
octocrab = "0.44"
anyhow = "1"
toml = "0.8"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
